2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: made methods alphabetical
	* src/FileSystem.cs: Removed old debug line. Renamed 'path' to 'directory'
	  to keep API consistant. Removed old FIXMEs that have been fixed.
	* src/Files/ImageFile.cs: Cosmetic changes

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/ImageFile.cs: Added some useful helper properties

2007-10-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* Sample/Main.cs, src/TestGphoto2Sharp.cs, src/Abilities.cs,
	  src/Base/CameraWidget.cs, src/Base/PortInfoList.cs,
	  src/Base/CameraFilesystem.cs, src/Base/PortInfo.cs,
	  src/Base/CameraList.cs, src/Base/Context.cs, src/Base/Port.cs,
	  src/Base/Object.cs, src/Base/ErrorCodes.cs, src/Base/Camera.cs,
	  src/Base/CameraFile.cs, src/Base/CameraAbilitiesList.cs: made the
	  library API-compatible with the previous release
	* src/File.cs, src/FileSystem.cs, src/Camera.cs, src/Files/GenericFile.cs,
	  src/Files/MusicFile.cs, src/Files/PlaylistFile.cs,
	  src/Files/ImageFile.cs: Added license header and made the library
	  API-compatible with the previous release

2007-10-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Bugfix for updating the metadata, hack/workaround for
	  libgphoto error: made Size settable. Correctly saving the filesystem
	* src/FileSystem.cs: Hack/Workaround for libgphoto bug. Copying metadata
	  over manually from old file -> new file

2007-10-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Push the stacktrace too

2007-10-13  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added some proper handling for metadata parsing errors

2007-10-13  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-10-07  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Added the FileSystem to the constructor and implemented the
	  'Size' property.
	* src/FileSystem.cs: Some path fixes for BaseDirectory usage. Removed
	  needless null check in DeleteFile(string, string)