@@ -1,41 +1,41 @@
 <Project name="libgphoto2-sharp" fileversion="2.0" language="C#" clr-version="Net_2_0" ctype="DotNetProject">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="DotNetProjectConfiguration">
-      <Output directory="./src/" assemblyKeyFile="./" assembly="libgphoto2-sharp" />
+      <Output directory="src/" assemblyKeyFile="" assembly="libgphoto2-sharp" />
       <Build debugmode="True" target="Library" />
       <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_2_0" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
     <Configuration name="Release" ctype="DotNetProjectConfiguration">
-      <Output directory="./src/" assemblyKeyFile="./" assembly="libgphoto2-sharp" />
+      <Output directory="src/" assemblyKeyFile="" assembly="libgphoto2-sharp" />
       <Build executeAfterBuild="../../../../usr/lib/monodevelop/bin/make distcheck" debugmode="True" target="Library" />
       <Execution runwithwarnings="True" consolepause="False" runtime="MsNet" clr-version="Net_2_0" />
       <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
   </Configurations>
   <Contents>
-    <File name="./src/Camera.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/File.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/Camera.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/CameraAbilitiesList.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/CameraFile.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/CameraFilesystem.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/CameraList.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/CameraWidget.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/Context.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/ErrorCodes.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/Object.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/Port.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/PortInfo.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Base/PortInfoList.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Abilities.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/FileSystem.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/TestGphoto2Sharp.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Files" subtype="Directory" buildaction="Compile" />
-    <File name="./src/Files/MusicFile.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Files/ImageFile.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Files/GenericFile.cs" subtype="Code" buildaction="Compile" />
-    <File name="./src/Files/PlaylistFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Camera.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/File.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/Camera.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/CameraAbilitiesList.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/CameraFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/CameraFilesystem.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/CameraList.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/CameraWidget.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/Context.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/ErrorCodes.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/Object.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/Port.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/PortInfo.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Base/PortInfoList.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Abilities.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/FileSystem.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/TestGphoto2Sharp.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Files" subtype="Directory" buildaction="Compile" />
+    <File name="src/Files/MusicFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Files/ImageFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Files/GenericFile.cs" subtype="Code" buildaction="Compile" />
+    <File name="src/Files/PlaylistFile.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
